package year_2022.day_22;


import lombok.AllArgsConstructor;

@AllArgsConstructor
public class MonkeyInstruction {
    int numForward;
    Character rotationDirection;
}
